# scripts

./: .gitignore  DijkstraSimple.hs  ListHelper.hs  Primes.hs  README.md  abundant.hs  amicable.hs  babyGrowth.py  collatz.hs  countSundays.hs  cycles.hs  divisors.hs  eulercoin.hs  fibonacci.hs  impfungen.py  labelLine.py  lychrel.hs  multiplesOf3Or5.hs  numberwords.hs  p8.hs  parser.hs  poker.hs  spiral.hs  sqrt2.hs  tripenthex.hs
816/: CHANGELOG.md  x816.cabal
816/app/: Main.hs
DijkstraSimple/: CHANGELOG.md  DijkstraSimple.cabal
DijkstraSimple/app/: DijkstraSimple.hs  Main.hs
Eulercoin/: CHANGELOG.md  Eulercoin.cabal
Eulercoin/app/: Main.hs
