cabal-version:      3.6
name:               x816
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Budelmann
maintainer:         Daniel.Budelmann@mevis.fraunhofer.de

build-type:         Simple
-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -XDataKinds

executable x816
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, mod^>=0.1.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
